Replace code with Java 8 compatible and checkstyles